Mon Oct  2 10:56:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/ntdef.h: Add define for NTAPI.

Sun Oct  1 23:55:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * include/ipexport.h: Add missing `extern "C"' directives.
        * include/iphlpapi.h: Ditto.
        * include/iprtrmib.h: Ditto.
        * include/iptypes.h: Ditto.

Sun Oct  1 22:09:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * include/ipifcons.h: New header file.
        * include/iprtrmib.h: Move operational states to ipifcons.h.
        * include/iphlpapi.h: Add missing parameters to GetIfTable()
        declaration.

Sun Oct  1 16:30:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * include/iprtrmib.h: Add missing MIB_IF_OPER_STATUS_xxx definitions.

Sun Oct  1 16:13:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * lib/iphlpapi.def: New stub for iphlpapi.dll.
        * include/iptypes.h: New header file.
        * include/ipexport.h: Ditto.
        * include/iphlpapi.h: Ditto.
        * include/iprtrmib.h: Ditto.

Sun Oct  1  2:54:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/ntdef.h: New file.

Fri Aug 18 17:17:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/winnt.h:Add enums for TokenRestrictedSids and TokenSessionId
	to TOKEN_INFORMATION_CLASS type.
	Add QUOTA_LIMITS type.

Tue Aug  8 21:29:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/userenv.h: New header file.
	* lib/userenv.def: New stub for userenv.dll.

Tue Aug  8 10:25:14 2000  Christopher Faylor <cgf@cygnus.com>

	* include/winuser.h: Correct PCWPSTRUCT typo.
	(discovered by Axel Riese)

2000-07-27  DJ Delorie  <dj@redhat.com>

	* include/windows.h: optimize non-inclusion of repeat headers
	
Fri Jul 21 12:10:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/winnt.h: Add missing typedefs for PTOKEN_SOURCE and
	LPTOKEN_SOURCE.

2000-07-11  DJ Delorie  <dj@cygnus.com>

	* include/shlobj.h: add CSIDL_COMMON_*
